--- a/.gitlab/ci/download-release-artifacts.yml
+++ b/.gitlab/ci/download-release-artifacts.yml
@@ -18,9 +18,9 @@
 
   script:
   - |
-    echo '### pulling existing orig via pristine-lfs'
-    git fetch --quiet --depth 1 origin pristine-lfs
-    pristine-lfs checkout "metalbond_${UPSTREAM_VERSION}.*" || true
+    echo '### pulling existing orig via lfs-storage'
+    git fetch --quiet --depth 1 origin lfs-storage
+    git lfs pull --include "metalbond_${UPSTREAM_VERSION}.*"
     mkdir _output
     cp *.deb _output
     cd _output
