--- a/.gitlab/ci/download-release-artifacts.yml
+++ b/.gitlab/ci/download-release-artifacts.yml
@@ -18,9 +18,12 @@
 
   script:
   - |
+    ls -la
     echo '### pulling existing orig via lfs-storage'
     git checkout lfs-storage
+    echo '### fetch lfs storage'
     git fetch --quiet --depth 1 origin lfs-storage
+    echo '### pull lfs storage'
     git lfs pull --include "metalbond_${UPSTREAM_VERSION}.*"
     mkdir _output
     cp *.deb _output
