--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ variables:
 
 workflow:
   rules:
-    - if: '$CI_COMMIT_TAG'
+    - if: $CI_COMMIT_BRANCH == "lfs-storage" && $CI_PIPELINE_SOURCE == "push"
+      
 
 include:
 - local: .gitlab/ci/download-release-artifacts.yml
