--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ variables:
 
 workflow:
   rules:
-    - if: $CI_COMMIT_BRANCH == "lfs-storage" && $CI_PIPELINE_SOURCE == "push"
+    - if: $CI_COMMIT_BRANCH == "lfs-storage"
       
 
 include:
