--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
   BUILD_ARCH_AMD64: 'true'
   BUILD_ARCH_ARM64: 'true'
   BUILD_SIGNED: ''
-  ORIG_TAR: 'metalbond-0.2.0.orig.tar.gz'
+  ORIG_TAR: 'metalbond_0.2.0.orig.tar.gz'
 
 include:
 - project: gardenlinux/gardenlinux-package-build
