--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
   BUILD_ARCH_ARM64: 'true'
   BUILD_SIGNED: ''
   ORIG_TAR: 'metalbond_0.2.0.orig.tar.gz'
+  SOURCE_NAME: 'metalbond'
 
 include:
 - project: gardenlinux/gardenlinux-package-build
