--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,17 @@ include:
   project: gardenlinux/gardenlinux-package-build
   file: pipeline/pipeline-git.yml
 
+build amd64:
+  tags:
+  - gardenlinux-build-amd64-large
+
+build arm64:
+  tags: 
+  - gardenlinux-build-arm64-large
+
 variables:
   SOURCE_NAME: 'metalbond'
-  SOURCE_REPO: https://github.com/onmetal/metalbond
+  SOURCE_REPO: ssh://git@ssh.github.com:443/onmetal/metalbond 
+  SOURCE_TAG_PREFIX: 'v'
   BUILD_ARCH_ALL: ''
   BUILD_REQUIRES_GO: 'true'
